# vpt-core

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
src/vpt_core/: __init__.py  log.py
src/vpt_core/image/: __init__.py  filter.py  filter_factory.py
src/vpt_core/io/: image.py  input_tools.py  output_tools.py  regex_tools.py  vzgfs.py
src/vpt_core/segmentation/: __init__.py  fuse.py  geometry_utils.py  polygon_utils.py  seg_result.py  segmentation_base.py  segmentation_item.py  segmentation_task.py  task_input_data.py
src/vpt_core/utils/: base_case.py  copy_utils.py  segmentation_utils.py
tests/vpt_core/: __init__.py  test_fusion.py  test_get_prepared_images.py  test_image_preprocess.py  test_image_set.py  test_logging.py  test_make_non_overlapping_polys.py  test_output_tools.py  test_regex_tools.py  test_relationships.py  test_save_geodataframe.py  test_seg_result.py  test_segmentation_base.py  test_segmentation_item.py  test_utils.py  test_vzgfs.py
