[tool.poetry]
name = "vpt_core"
version = "1.1.0"
description = "Core components for the Vizgen Post-processing Tool"
license = "Apache-2.0"
authors = ["Vizgen <techsupport@vizgen.com>"]
maintainers = ["Timothy Wiggin <timothy.wiggin@vizgen.com>"]
readme = "README.md"
repository = "https://github.com/Vizgen/vpt-core"
documentation = "https://vizgen.github.io/vizgen-postprocessing/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "vpt_core*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
boto3 = ">=1.17"
fsspec = ">=2021.10.0"
geopandas = ">=0.13.2"
gcsfs = ">=2021.10.0"
numpy = "^1.24.3"
opencv-python-headless = ">=4.6.0.66"
pandas = "^2.0.3"
psutil = "*"
pyarrow = ">=8.0.0, <14.0.0"
python-dotenv = ">=0.20.0"
rasterio = ">=1.3.0, <1.3.6"
s3fs = ">=2021.10.0"
scikit-image = ">=0.19.3"
shapely = ">=2.0.0"
tenacity = ">=8.2.2"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.poetry.group.deploy.dependencies]
python-semantic-release = "^7.32.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "develop"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
